2005-02-21  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: LDFLAGS additions for FreeBSD users.

2005-02-18  Raimund 'Raimi' Jacob  <raimi@lkcc.org>

	* configure.ac: Add another paths to look for Qt header/library in.
	Required for FreeBSD. Use gmake there.

2004-11-24    <raimi@lkcc.org>

	* autogen.sh: Make aclocal and automake program be overridable
	with environment variable. Need this so i can easily build on
	debian woody, I hope nobody takes offense.
	PS: While Stefan is away, I will commit his stuff.

2004-11-23  Michael Margraf <michael.margraf@alumni.tu-berlin.de>

	* added icon to QucsEdit and QucsHelp

2004-11-11  Stefan Jahn  <stefan@lkcc.org>

	* qucs-edit/qucsedit.cpp (slotAbout): Added proper copyright
	notice to the 'About' dialog.

2004-10-23  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.4 and bumped up to version
	0.0.5.

2004-09-30  Stefan Jahn  <stefan@lkcc.org>

	* qucs-edit/qucsedit.1: Added simple man page for qucsedit.

	* qucs-help/qucshelp.1: Added simple man page for qucshelp.

	* qucs-help/main.cpp (main): Trying to obtain the correct
	language help directory by splitting e.g. 'es_MX' to use the
	'es' directory.

2004-09-15  Stefan Jahn  <stefan@lkcc.org>

	* qucs-help/main.cpp (main): Using locale() string to check
	whether the documentation directory in the specific language
	is available.

	* configure.ac: Made the DOCDIR variable for choosing a
	specific language.

2004-09-04  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Released version 0.0.3 and bumped up to version
	0.0.4.

2004-08-30  Stefan Jahn  <jahn@mwt.ee.tu-berlin.de>

	* configure.ac: Checking for 'ieeefp.h'.

2004-07-03  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Ensured that the default prefix gets set early
	in the configure script.

2004-06-27  Stefan Jahn  <stefan@lkcc.org>

	* configure.ac: Displaying warning message if the 'moc' compiler
	can not be found.  Checking for new platforms.

2004-06-03  Stefan Jahn  <stefan@lkcc.org>