@@ -47,7 +47,7 @@ Jose L. Redrejo Rodriguez <jredrejo@edu.juntaextremadura.net> for
 
 Vincent Habchi, F5RCS <10.50@free.fr> for the French translations.
 
-Toyoyuki ISHIKAWA <ishikawa@conceptkeeper.net> for the Japanese
+Toyoyuki Ishikawa <ishikawa@conceptkeeper.net> for the Japanese
 	translations.
 
 Jozsef Bus <busj@mailbox.hu> for the Hungarian translations.
