@@ -4211,11 +4211,6 @@ Moves the property text of components</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <source>Japanese by Toyoyuki ISHIKAWA
-</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
         <source>Italian by Giorgio Luparia
 </source>
         <translation type="unfinished"></translation>
@@ -4233,6 +4228,11 @@ Moves the property text of components</source>
     <message>
         <source>Special thanks to Jens Flucke and Raimund Jacob
 
+</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Japanese by Toyoyuki Ishikawa
 </source>
         <translation type="unfinished"></translation>
     </message>
