@@ -4305,11 +4305,6 @@ Mută proprietatea text al componentelor</translation>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <source>Japanese by Toyoyuki ISHIKAWA
-</source>
-        <translation type="unfinished"></translation>
-    </message>
-    <message>
         <source>Italian by Giorgio Luparia
 </source>
         <translation type="unfinished"></translation>
@@ -4327,6 +4322,11 @@ Mută proprietatea text al componentelor</translation>
     <message>
         <source>Special thanks to Jens Flucke and Raimund Jacob
 
+</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Japanese by Toyoyuki Ishikawa
 </source>
         <translation type="unfinished"></translation>
     </message>
