@@ -1,3 +1,7 @@
+2005-02-23  Stefan Jahn  <stefan@lkcc.org>
+
+	* qucs_fr.ts: Applied french translation updates by Vincent.
+
 2005-02-19  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>
 
 	* fixed two small bugs that painted diagrams wrong.
